--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Pisos",
   "manifest_version": 2,
-  "version": "0.2",
+  "version": "0.3",
   "permissions": [
     "https://*/",
     "http://*/",
@@ -17,5 +17,6 @@
       "js": ["status.js"],
       "run_at": "document_end"
     }
-  ]
+  ],
+  "web_accessible_resources": ["pisos_cat.jpg"]
 }
